Add instructions to upload

--- a/docs/notebooks/intro_notebook.ipynb
+++ b/docs/notebooks/intro_notebook.ipynb
@@ -11,7 +11,7 @@
     "\n",
     "Contact author: [Julia Gschwend](mailto:julia@linea.org.br)\n",
     "\n",
-    "Last verified run: 2024-May-06<br>"
+    "Last verified run: 2024-Jun-04<br>"
    ]
   },
   {
@@ -28,7 +28,7 @@
     "    - [Introduction](#introduction) \n",
     "    - [How to upload a data product to the PZ Server](#how-to-upload-a-data-product-to-the-pz-server)\n",
     "    - [How to download a data product from the PZ Server](#how-to-download-a-data-product-from-the-pz-server)\n",
-    "- PZ Server API (Python library pz-server-lib)\n",
+    "- PZ Server API (Python library pzserver)\n",
     "    - [How to get general info from PZ Server](#how-to-get-general-info-from-pz-server)\n",
     "    - [How to display the metadata of a data product](#how-to-display-the-metadata-of-a-data-product)\n",
     "    - [How to download data products as .zip files](#how-to-download-data-products-as-zip-files)  \n",
@@ -62,19 +62,13 @@
    "source": [
     "The Photo-z (PZ) Server is an online service available for the LSST Community to host and share lightweight photo-z related data products. The upload and download of data and metadata can be done at the website [pz-server.linea.org.br](https://pz-server.linea.org.br/) (during the development phase, a test environment is available at [pz-server-dev.linea.org.br](https://pz-server-dev.linea.org.br/)). There, you will find two separate pages containing a list of data products each: one for LSST Data Management's oficial data products, and other for user-generated data products. **The registered data products can also be accessed directly from Python code using the PZ Server's data access API, as demonstrated below.**\n",
     "\n",
-    "The PZ Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. The service is hosted in the Brazilian IDAC, not directly connected to the [Rubin Science Platform (RSP)](https://data.lsst.cloud/). However, it requires RSP credentials for user's authentication. For a comprehensive documentation about the PZ Server, please visit the [PZ Server's documentation page](https://linea-it.github.io/pz-lsst-inkind-doc/). There, you will find also an overview of all LIneA's contributions related to Photo-zs. The internal documentation of the API functions is available on the [API's documentation page](https://linea-it.github.io/pz-server-lib/html/index.html).  "
+    "The PZ Server is developed and delivered as part of the in-kind contribution program BRA-LIN, from LIneA to the Rubin Observatory's LSST. The service is hosted in the Brazilian IDAC, not directly connected to the [Rubin Science Platform (RSP)](https://data.lsst.cloud/). However, it requires RSP credentials for user's authentication. For a comprehensive documentation about the PZ Server, please visit the [PZ Server's documentation page](https://linea-it.github.io/pz-lsst-inkind-doc/). There, you will find also an overview of all LIneA's contributions related to Photo-zs. The internal documentation of the API functions is available on the [API's documentation page](https://linea-it.github.io/pzserver/html/index.html).  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: right\" id=\"how-to-upload-a-data-product-to-the-pz-server\">\n",
-    "\n",
-    "[back to the top](#notebook-contents)\n",
-    "\n",
-    "</div>\n",
-    "\n",
     "## How to upload a data product to the PZ Server \n",
     "\n",
     "To upload a data product, click on the button **NEW PRODUCT** on the top left of the **User-generated Data Products** page and fill in the Upload Form with relevant metadata.\n",
@@ -91,12 +85,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: right\">\n",
-    "\n",
-    "[back to the top](#notebook-contents)\n",
-    "\n",
-    "</div>\n",
-    "\n",
     "## How to download a data product from the PZ Server\n",
     "\n",
     "To download a data product available on the Photo-z Server, go to one of the two pages by clicking on the card \"LSST PZ Data Products\" (for official products released by LSST DM Team) or \"User-generated Data Products\" (for products uploaded by the members of LSST community. The download button is on the left side of each data product (each row of the list). "
@@ -106,13 +94,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: right\" id=\"how-to-download-a-data-product-from-the-pz-server\">\n",
-    "\n",
-    "[back to the top](#notebook-contents)\n",
-    "\n",
-    "</div>\n",
-    "\n",
-    "# The PZ Server API (Python library pz-server-lib)"
+    "# The PZ Server API (Python library `pzserver`)"
    ]
   },
   {
@@ -140,7 +122,6 @@
     "To install the API and its dependencies, type:\n",
     "\n",
     "```\n",
-    "$ pip install -e .\n",
     "$ pip install .[dev]\n",
     "```\n",
     "\n",
@@ -189,19 +170,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pz_server = PzServer(token=\"<your token>\", host=\"pz-dev\") # \"pz-dev\" is the temporary host for test phase  "
+    "# pz_server = PzServer(token=\"<your token>\", host=\"pz-dev\") # \"pz-dev\" is the temporary host for test phase  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: right\" id=\"how-to-get-general-info-from-pz-server\">\n",
-    "\n",
-    "[back to the top](#notebook-contents)\n",
-    "\n",
-    "</div>\n",
-    "\n",
+    "For convenience, the token can be saved into a file named as `token.txt` (which is already listed in the .gitignore file in this repository). "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('token.txt', 'r') as file:\n",
+    "    token = file.read()\n",
+    "pz_server = PzServer(token=token, host=\"pz-dev\") # \"pz-dev\" is the temporary host for test phase  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## How to get general info from PZ Server"
    ]
   },
@@ -209,7 +202,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The object `pz_server` just created above can provide access to data and metadata stored in the PZ Server. It also brings useful methods for users to navigate through the available contents. The methods with the preffix `get_` return the result of a query on the PZ Server database as a Python dictionary, and are most useful to be used programatically (see detaials on the [API documentation page](https://linea-it.github.io/pz-server-lib/html/index.html)). Alternatively, those with the preffix `display_` show the results as a styled [_Pandas DataFrames_](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html), optimized for Jupyter Notebook (note: column names might change in the display version). For instance:\n",
+    "The object `pz_server` just created above can provide access to data and metadata stored in the PZ Server. It also brings useful methods for users to navigate through the available contents. The methods with the preffix `get_` return the result of a query on the PZ Server database as a Python dictionary, and are most useful to be used programatically (see detaials on the [API documentation page](https://linea-it.github.io/pzserver/html/index.html)). Alternatively, those with the preffix `display_` show the results as a styled [_Pandas DataFrames_](https://pandas.pydata.org/docs/reference/api/pandas.DataFrame.html), optimized for Jupyter Notebook (note: column names might change in the display version). For instance:\n",
     "\n",
     "Display the list of product types supported with a short description;"
    ]
@@ -349,12 +342,84 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div style=\"text-align: right\" id=\"how-to-display-the-metadata-of-a-data-product\">\n",
+    "## How to upload a data product to via Python API (alternative method)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The default method to upload a data product to the PZ Server is the upload tool on PZ Server website, as shown above. Alternatively, data products can be sent to the host service using the `pzserver` Python library. \n",
     "\n",
-    "[back to the top](#notebook-contents)\n",
-    "\n",
-    "</div>\n",
-    "\n",
+    "First, prepare a dictionary with the relevant information about your data product: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_to_upload = {\n",
+    "    \"name\":\"upload example\",\n",
+    "    \"product_type\": \"Spec-z Catalog\",  \n",
+    "    \"release\": None, # LSST release, use None if not LSST data \n",
+    "    \"main_file\": \"example.csv\", # full path \n",
+    "    \"auxiliary_files\": [\"example.html\", \"example.ipynb\"] # full path\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upload = pz_server.upload(**data_to_upload)  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_dict = {\"ID\" : \"ID\",  \n",
+    "                \"RA\" : \"RA\", \n",
+    "                \"Dec\": \"DEC\",\n",
+    "                \"z\"  : \"Z\",\n",
+    "                \"z_err\" : \"ERR_Z\",\n",
+    "                \"z_flag\": \"FLAG_DES\" \n",
+    "               }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upload.make_columns_association(columns_dict) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "upload.product_id"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## How to display the metadata of a data product    "
    ]
   },
@@ -362,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The metadata of a given data product is the information provided by the user on the upload form. This information is attached to the data product contents and is available for consulting on the PZ Server page or using this Python API (`pz-server-lib`).\n",
+    "The metadata of a given data product is the information provided by the user on the upload form. This information is attached to the data product contents and is available for consulting on the PZ Server page or using this Python API (`pzserver`). \n",
     "\n",
     "All data products stored on PZ Server are identified by a unique **id** number or an unique name, a _string_ called **internal_name**, which is created automatically at the moment of the upload by concatenating the product **id** to the name given by its owner (replacing blank spaces by \"_\", lowering cases, and removing special characters). "
    ]
@@ -941,7 +1006,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.3"
   },
   "nbsphinx": {
    "execute": "never"
