update notebook with upload example

--- a/docs/notebooks/intro_notebook.ipynb
+++ b/docs/notebooks/intro_notebook.ipynb
@@ -69,23 +69,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to upload a data product to the PZ Server \n",
+    "## How to upload a data product on the PZ Server website\n",
     "\n",
-    "To upload a data product, click on the button **NEW PRODUCT** on the top left of the **User-generated Data Products** page and fill in the Upload Form with relevant metadata.\n",
+    "To upload a data product, click on the button **NEW PRODUCT** on the top left of the **User-generated Data Products** page and fill in the Upload Form with relevant metadata. Alternatively, the user can upload files to the PZ Server programatically via the `pzserver` Python Library (described below). \n",
     "\n",
     "The photo-z-related products are organized into four categories (product types):\n",
     "\n",
     "- **Spec-z Catalog:** Catalog of spectroscopic redshifts and positions (usually equatorial coordinates).\n",
     "- **Training Set:** Training set for photo-z algorithms (tabular data). It usually contains magnitudes, errors, and true redshifts.\n",
     "- **Photo-z Validation Results:** Results of a photo-z validation procedure (free format). Usually contains photo-z estimates (single estimates and/or pdf) of a validation set, photo-z validation metrics, validation plots, etc.\n",
-    "- **Photo-z Table:** Results of a photo-z estimation procedure. Ideally in the same format as the photo-z tables delivered by the DM as part of the LSST data releases. If the data is larger than the file upload limit (200MB), the product entry stores only the metadata (and instructions on accessing the data should be provided in the description field)."
+    "- **Photo-z Table:** Results of a photo-z estimation procedure. Ideally in the same format as the photo-z tables delivered by the DM as part of the LSST data releases. If the data is larger than the file upload limit (200MB), the product entry stores only the metadata (and instructions on accessing the data should be provided in the description field). "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## How to download a data product from the PZ Server\n",
+    "## How to download a data product from the PZ Server website\n",
     "\n",
     "To download a data product available on the Photo-z Server, go to one of the two pages by clicking on the card \"LSST PZ Data Products\" (for official products released by LSST DM Team) or \"User-generated Data Products\" (for products uploaded by the members of LSST community. The download button is on the left side of each data product (each row of the list). "
    ]
@@ -361,8 +361,8 @@
    "outputs": [],
    "source": [
     "data_to_upload = {\n",
-    "    \"name\":\"upload example\",\n",
-    "    \"product_type\": \"Spec-z Catalog\",  \n",
+    "    \"name\":\"upload example 1\",\n",
+    "    \"product_type\": \"specz_catalog\",  \n",
     "    \"release\": None, # LSST release, use None if not LSST data \n",
     "    \"main_file\": \"example.csv\", # full path \n",
     "    \"auxiliary_files\": [\"example.html\", \"example.ipynb\"] # full path\n",
@@ -988,6 +988,13 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -1006,7 +1013,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.10"
   },
   "nbsphinx": {
    "execute": "never"
