--- a/docs/notebooks/1_specz_catalogs.ipynb
+++ b/docs/notebooks/1_specz_catalogs.ipynb
@@ -8,11 +8,16 @@
     "<img align=\"left\" src = \"images/rubin.png\" width=180 style=\"padding: 20px\"> \n",
     "\n",
     "# Photo-z Server\n",
-    "## Tutorial Notebook 1 - Spec-z Catalogs\n",
-    "\n",
+    "## Tutorial Notebook 1 - Spec-z Catalogs\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Contact author: [Julia Gschwend](mailto:julia@linea.org.br)\n",
     "\n",
-    "Last verified run: 2024-Jul-04<br>"
+    "Last verified run: **2024-Jul-04**"
    ]
   },
   {
@@ -123,9 +128,17 @@
     "Recommended columns: \n",
     "* Spectroscopic redshift error - `float`\n",
     "* Quality flag - `integer`, `float`, or `string`\n",
-    "* Survey name (recommended for compilations of data from different surveys)\n",
-    "\n",
-    "Spec-z Catalogs can be uploaded by users on PZ Server website or via the `pzserver` library. Also, they can be created as the combination of a list of other Spec-z Catalogs previously registered in the system by the PZ Sever's pipeline \"Combine Spec-z Catalogs\" (under development). Any catalog built by the pipeline is automaticaly registered as a regular user-generated data product and has no difference from the uploaded ones. \n"
+    "* Survey name (recommended for compilations of data from different surveys)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "#### PZ Server Pipelines\n",
+    "Spec-z Catalogs can be uploaded by users on PZ Server website or via the `pzserver` library. Also, they can be created as the combination of a list of other Spec-z Catalogs previously registered in the system by the PZ Sever's pipeline \"Combine Spec-z Catalogs\" (under development). Any catalog built by the pipeline is automaticaly registered as a regular user-generated data product and has no difference from the uploaded ones. "
    ]
   },
   {
@@ -173,8 +186,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The spec-z catalog object has a very basic plot method for quick visualization of catalog properties. For advanced interactive data visualization tips, we recommend the notebook [**DP02_06b_Interactive_Catalog_Visualization.ipynb**](https://github.com/rubin-dp0/tutorial-notebooks/blob/main/DP02_06b_Interactive_Catalog_Visualization.ipynb) from Rubin Observatory's DP0.2 [tutorial-notebooks repository](https://github.com/rubin-dp0/tutorial-notebooks/tree/main). \n",
-    "\n"
+    "The spec-z catalog object has a very basic plot method for quick visualization of catalog properties. For advanced interactive data visualization tips, we recommend the notebook [**DP02_06b_Interactive_Catalog_Visualization.ipynb**](https://github.com/rubin-dp0/tutorial-notebooks/blob/main/DP02_06b_Interactive_Catalog_Visualization.ipynb) from Rubin Observatory's DP0.2 [tutorial-notebooks repository](https://github.com/rubin-dp0/tutorial-notebooks/tree/main). "
    ]
   },
   {
