--- a/docs/notebooks/0_introduction.ipynb
+++ b/docs/notebooks/0_introduction.ipynb
@@ -9,10 +9,16 @@
     "\n",
     "# Photo-z Server\n",
     "## Tutorial Notebook 0 - Introduction\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Contact author: [Julia Gschwend](mailto:julia@linea.org.br)\n",
     "\n",
-    "Last verified run: 2024-Jul-04<br>"
+    "Last verified run: **2024-Jul-04**"
    ]
   },
   {
