export to rst files

--- a/docs/notebooks/0_introduction.ipynb
+++ b/docs/notebooks/0_introduction.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img align=\"left\" src = \"images/linea.png\" width=120 style=\"padding: 20px\"> \n",
-    "<img align=\"left\" src = \"images/rubin.png\" width=180 style=\"padding: 20px\"> \n",
+    "<img align=\"left\" src = \"images/linea.png\" width=140 style=\"padding: 20px\"> \n",
+    "<img align=\"left\" src = \"images/rubin.png\" width=180 style=\"padding: 30px\"> \n",
     "\n",
     "# Photo-z Server\n",
     "## Tutorial Notebook 0 - Introduction\n",
@@ -18,7 +18,7 @@
    "source": [
     "Contact author: [Julia Gschwend](mailto:julia@linea.org.br)\n",
     "\n",
-    "Last verified run: **2024-Jul-04**"
+    "Last verified run: **2024-Jul-09**"
    ]
   },
   {
@@ -97,7 +97,7 @@
    "metadata": {},
    "source": [
     "<center>\n",
-    "    <img src=\"images/ScreenshotProductListButtons.png\" width=150pt /> \n",
+    "    <img src=\"images/ScreenshotProductListButtons.png\" width=150pt/> \n",
     "</center>\n"
    ]
   },
@@ -120,8 +120,24 @@
     "\n",
     "```\n",
     "$ pip install pzserver \n",
-    "``` \n",
-    "\n",
+    "``` "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "! pip install pzserver "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
+   "source": [
     "**For developers**  \n",
     "\n",
     "Alternatively, if you have cloned the repository with:\n",
@@ -137,7 +153,7 @@
     "```\n",
     "\n",
     "--- \n",
-    "OBS: You might need to restart the kernel on the notebook to incorporate the new library. \n"
+    "OBS: You might need to restart the kernel on the notebook to incorporate the new library. "
    ]
   },
   {
@@ -272,6 +288,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -323,6 +340,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "scrolled": true,
     "tags": []
    },
    "outputs": [],
@@ -629,9 +647,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "LSST",
    "language": "python",
-   "name": "python3"
+   "name": "lsst"
   },
   "language_info": {
    "codemirror_mode": {
@@ -643,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.7"
   },
   "nbsphinx": {
    "execute": "never"
