--- a/docs/notebooks/2_training_sets.ipynb
+++ b/docs/notebooks/2_training_sets.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img align=\"left\" src = \"images/linea.png\" width=120 style=\"padding: 20px\"> \n",
-    "<img align=\"left\" src = \"images/rubin.png\" width=180 style=\"padding: 20px\"> \n",
+    "<img align=\"left\" src = \"images/linea.png\" width=140 style=\"padding: 20px\"> \n",
+    "<img align=\"left\" src = \"images/rubin.png\" width=180 style=\"padding: 30px\"> \n",
     "\n",
     "# Photo-z Server\n",
     "## Tutorial Notebook 2 - Training Sets\n"
@@ -208,9 +208,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "LSST",
    "language": "python",
-   "name": "python3"
+   "name": "lsst"
   },
   "language_info": {
    "codemirror_mode": {
@@ -222,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.11.7"
   },
   "nbsphinx": {
    "execute": "never"
