apply text fixes suggested by Luigi in PR #92 review

--- a/docs/notebooks/0_introduction.ipynb
+++ b/docs/notebooks/0_introduction.ipynb
@@ -27,28 +27,6 @@
     "tags": []
    },
    "source": [
-    "<div id=\"notebook-contents\" />\n",
-    "\n",
-    "# Notebook contents\n",
-    "\n",
-    "- PZ Server\n",
-    "    - [Introduction](#introduction) \n",
-    "    - [How to upload a data product to the PZ Server](#how-to-upload-a-data-product-to-the-pz-server)\n",
-    "    - [How to download a data product from the PZ Server](#how-to-download-a-data-product-from-the-pz-server)\n",
-    "- PZ Server API (Python library pzserver)\n",
-    "    - [How to get general info from PZ Server](#how-to-get-general-info-from-pz-server)\n",
-    "    - [How to display the metadata of a data product](#how-to-display-the-metadata-of-a-data-product)\n",
-    "    - [How to download data products as .zip files](#how-to-download-data-products-as-zip-files)  \n",
-    "    - [How to share data products with other RSP users](#how-to-share-data-products-with-other-rsp-users)\n",
-    "    - [How to retrieve contents of data products (work on memory)](#how-to-retrieve-contents-of-data-products-work-on-memory)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
     "# The PZ Server\n",
     "\n",
     "<div id=\"introduction\"></div>\n",
@@ -553,7 +531,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The tabular data is alocated in the attribute `data`, which is a `pandas.DataFrame`. "
+    "The tabular data is allocated in the attribute `data`, which is a `pandas.DataFrame`. "
    ]
   },
   {
