--- a/docs/notebooks/1_specz_catalogs.ipynb
+++ b/docs/notebooks/1_specz_catalogs.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "### Introduction \n",
     "\n",
-    "Welcome to the PZ Server tutorials. If you are reading this notebook for the first time, we recommend to not skip the introduction notebook: `0_introduction.ipynb` also available in this same repository. \n"
+    "Welcome to the PZ Server tutorials. If you are reading this notebook for the first time, we recommend not to skip the introduction notebook: `0_introduction.ipynb` also available in this same repository. \n"
    ]
   },
   {
